# wassilypy

./: LICENSE  README.md  pyproject.toml
examples/: demo.py  solids.py  swatchDemo.py
tests/: __init__.py  test_load_data.py
wassilypy/: __init__.py  frame.py  marking.py
wassilypy/data/: sample.txt  wassilyts.umd.js
