[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wassilypy"
authors = [{name = "Aaron Watters"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[tool.flit.module]
name = "wassilypy"

[tool.flit.sdist]
include = ["wassilypy/data/"]
