[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wassilypy"
authors = [{name = "Aaron Watters"}]
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "h5gizmos"
]

[project.optional-dependencies]
test = ["pytest"]

[tool.flit.module]
name = "wassilypy"

[tool.flit.sdist]
include = ["wassilypy/data/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
